# rpg_game

./: .gitignore  README.md  buildozer.spec  main.py
.github/workflows/: build-apk.yml  build-cpp.yml  build.yml
assets/images/: README.md
cmake/: CMakeLists.txt
data/: items.py
data/maps/: map01.py
engine/: assets.py  commands.py  console.py  entity.py  player.py  settings.py  world.py
game/core/: entity.py  map_renderer.py  sprite_animation.py
game/data/: animations.py  mobs.py  npcs.py  player_customization.py  sprite_config.py
game/maps/: world_map.py
game/ui/: hud.py
src/: main.cpp
tools/: generate_assets.py
